--- a/web/css/main.css
+++ b/web/css/main.css
@@ -885,6 +885,22 @@ h2.title {
 	font-weight: 700;
 }
 
+.productinfo p a{
+   color:#696763;
+}
+
+.productinfo p a:link{
+   
+}
+.productinfo p a:visited{
+   
+}
+.productinfo p a:hover{
+  color: #FE980F;
+}
+.productinfo p a:active{
+   
+}
 
 .productinfo p{
   font-family: 'Roboto', sans-serif;
@@ -1164,7 +1180,6 @@ h2.title {
   margin-top: 40px;
 }
 
-
 #reviews {
   padding-left: 25px;
   padding-right: 25px;
@@ -1176,7 +1191,9 @@ h2.title {
   margin-top: 10px;
 }
 
-
+.del-item {
+    cursor: pointer;
+}
 
 .view-product {
   position: relative;
